iptables-save.txt
# Generated by iptables-save v1.4.7 on Mon Aug 11 19:50:25 2014
*nat
:PREROUTING ACCEPT [226904:21102731]
:POSTROUTING ACCEPT [389723:23527747]
:OUTPUT ACCEPT [389723:23527747]
-A PREROUTING -i eth0 -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 9080 
-A PREROUTING -i eth0 -p tcp -m tcp --dport 443 -j REDIRECT --to-ports 9443 
COMMIT
# Completed on Mon Aug 11 19:50:25 2014
# Generated by iptables-save v1.4.7 on Mon Aug 11 19:50:25 2014
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1872264:171403388]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p icmp -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A INPUT -s 74.208.102.224/32 -p tcp -m state --state NEW -m tcp --dport 2049 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 9080 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 9443 -j ACCEPT 
-A INPUT -s 127.0.0.1/32 -p tcp -m state --state NEW -m tcp --dport 8080 -j ACCEPT 
-A INPUT -s 127.0.0.1/32 -p tcp -m state --state NEW -m tcp --dport 8070 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT 
-A INPUT -j REJECT --reject-with icmp-host-prohibited 
-A FORWARD -j REJECT --reject-with icmp-host-prohibited 
COMMIT
